--- a/django-todo-react/frontend/package.json
+++ b/django-todo-react/frontend/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "proj-baba-summer",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
-    "express": "^4.19.2",
+    "bootstrap": "^4.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
+    "reactstrap": "^8.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
